@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Added new_timeout constructor for a future that fails after a delay
 
 0.003     2015-11-28 15:34:30 EST
   - $loop parameter to constructors is now optional
